k8s-web-backend.yml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: backend-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-service
  template:
    metadata:
      labels:
        app: backend-service
    spec:
      containers:
        - name: backend-service
          image: gitlab-devops.cloud.rennes.enst-bretagne.fr:4567/l20same/devops-f20-02/backend:latest
          ports:
          - containerPort: 80
      imagePullSecrets:
        - name: registry-secret
