k8s-web-frontend.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: web-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-service
  template:
    metadata:
      labels:
        app: web-service
    spec:
      containers:
        - name: web-service
          image: gitlab-devops.cloud.rennes.enst-bretagne.fr:4567/devops/shared/web-frontend:latest
          ports:
            - containerPort: 80 
      imagePullSecrets:
        - name: registry-secret
