k8s-web-photo.yml
---
apiVersion: v1
kind: Service
metadata:
  name: photo-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: photo-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photo-service
  template:
    metadata:
      labels:
        app: photo-service
    spec:
      containers:
        - name: photo-service
          image: gitlab-devops.cloud.rennes.enst-bretagne.fr:4567/l20same/devops-f20-02/photo:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: registry-secret
