k8s-web-tags.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tags-service
spec:
  ports:
    - name: http
      port: 50051
      protocol: TCP
      targetPort: 50051
  selector:
    app: tags-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tags-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tags-service
  template:
    metadata:
      labels:
        app: tags-service
    spec:
      containers:
      - name: tags-service
        image: gitlab-devops.cloud.rennes.enst-bretagne.fr:4567/l20same/devops-f20-02/tags:latest
        ports:
          - containerPort: 50051
      imagePullSecrets:
      - name: registry-secret
