k8s-ingress.yml
---
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: web
  namespace: devops-f20-02-233-deploy
spec:
  rules:
  - host: photo.example.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80

---
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: api
  namespace: devops-f20-02-233-deploy
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
  - host: api.example.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: backend-service
          servicePort: 80
